@@ -2,6 +2,7 @@ PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? ????, Version 4.0 Beta 4
+- Added strncmp() function, courtesy of Walter. (Andrei)
 - Made the output of var_dump() more informative. (Thies)
 - Fixed some OCIBindByName() problems. (Thies)
 - Protect the ISAPI module against exceptions.  Stack overflows in scripts are
